[project]
name = "github-user-activity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.13.0",
    "requests>=2.32.3",
]

[tool.setuptools]
py-modules = ["github_activity", "fetch_data"]

[project.scripts]
github-activity = "github_activity:main"
